# python-uv-complete-guide

./: .gitignore  INDEX.md  README.md  pyproject.toml
docs/: 01_introduction.md  02_installation.md  03_project_setup.md  04_dependency_management.md  05_virtual_envs.md  06_scripts_and_tools.md  07_performance_comparison.md  08_best_practices.md  09_troubleshooting.md
examples/basic_project/: README.md  main.py  pyproject.toml  test_main.py
examples/ci_cd_example/: Makefile  README.md  calculator.py  pyproject.toml  test_calculator.py
examples/ci_cd_example/.github/workflows/: ci.yml
examples/data_engineering_project/: README.md  data_processor.py  pyproject.toml  test_data_processor.py
examples/fastapi_project/: README.md  main.py  pyproject.toml  test_main.py
