[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uv-complete-guide"
version = "1.0.0"
description = "A comprehensive guide to uv - the ultra-fast Python package manager"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Documentation Team"}
]
keywords = ["uv", "python", "package-manager", "guide", "tutorial"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Software Distribution",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/astral-sh/uv"
Documentation = "https://docs.astral.sh/uv/"
Repository = "https://github.com/astral-sh/uv"
Issues = "https://github.com/astral-sh/uv/issues"
