[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-engineering-project"
version = "0.1.0"
description = "A data engineering project using uv with pandas, polars, and SQLAlchemy"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

[dependency-groups]
core = [
    "pandas>=2.0.0",
    "polars>=0.19.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
]
database = [
    "psycopg2-binary>=2.9.0",
    "pymysql>=1.1.0",
]
pipeline = [
    "apache-airflow>=2.5.0",
    "dbt-core>=1.5.0",
]
viz = [
    "matplotlib>=3.7.0",
    "plotly>=5.14.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "jupyter>=1.0.0",
]

[project.optional-dependencies]
all = [
    "pandas>=2.0.0",
    "polars>=0.19.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.0",
    "pymysql>=1.1.0",
    "apache-airflow>=2.5.0",
    "dbt-core>=1.5.0",
    "matplotlib>=3.7.0",
    "plotly>=5.14.0",
]
